ecmascript/parser/tests/test262-error-references/fail/c49106fce7ac6b09.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/c49106fce7ac6b09.js:2:1
  |
2 | ]
  | ^

